--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,6 +347,7 @@ section .container {
 }
 .about-me img {
 	border: 2px solid #18d36e;
+	border-radius: 31% 69% 16% 84% / 73% 37% 63% 27%; 
 }
 
 /*=== Skills ===*/
